crates/baml-bridge/tests/ui/map_key_repr_non_map.rs
use baml_bridge::BamlType;

#[derive(BamlType)]
struct Bad {
    #[baml(map_key_repr = "string")]
    value: Vec<String>,
}

fn main() {}
